--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.flyway.baseline-on-migrate=true
 spring.flyway.locations=classpath:db/migration
 
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
